k8s_config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: baoxian-wechat-service
  namespace: baoxian
spec:
  selector:
    app: baoxian-wechat-bot
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9898
    - name: aaas
      port: 81
      targetPort: 9898
